# SilverPilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
.agent/: GEMINI.md
.agent/agents/: archaeologist-agent.md  backend-architect.md  data-engineer.md  debugger-agent.md  scout-agent.md  (+4 more)
.codex/: AGENTS.md  README.md  config.toml
agents/: ml-agent.md  news-agent.md  planner-agent.md  report-agent.md  risk-agent.md
docs/: ARCHITECTURE.md  DATA_CONTRACTS.md  DECISIONS.md  PHASE_PLAN.md  PLAN-saas-robustness.md  PRE_SAAS_STABILITY_AUDIT.md  RISK_POLICY.md  ROADMAP.md  WORKLOG.md  deployment.md  source-feasibility-v1.md  source-policy-v1.md
memory-bank/: activeContext.md  agentRules.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
migrations/: env.py
plan/: README.md  deployment-readiness-before-phase-14.md  phase-00-audit-repository-skeleton.md  phase-01-audit-domain-db.md  phase-02a-audit-kuveyt-feasibility.md  phase-02b-audit-kuveyt-provider.md  phase-03-audit-price-storage-bars.md  phase-04-audit-indicators.md  phase-05-regime-detector.md  phase-06-simple-strategy.md  phase-07-risk-manager.md  phase-08-paper-broker-ledger.md  phase-09-backtest-engine.md  phase-10-rest-api.md  phase-11-telegram-adapter.md  phase-12-news-hermes-risk.md  phase-13-reporting-dashboard-data.md  phase-14-ml-experiments.md  phase-15-architecture-closure.md  phase-16-cost-conversion-premium.md  phase-17-ml-productization-boundary.md
scratch/: check_db.py  debug_collector.py  test_feeds.py  test_yahoo.py
scripts/: backfill_history.py  backtest.py  backtest_engine.py  build_dataset.py  deploy.sh  evaluate_challenger.py  init_db.py  promote_model.py  run_collector.py  run_daily_report.py  seed_agent_cache.py  seed_dev.py  seed_training_data.py  train_model.py  verify_execution_pipeline.py  vps_smoke.sh
tests/: test_api_phase10.py  test_backtests.py  test_database_schema.py  test_deployment_config.py  test_domain_models.py  test_health.py  test_indicators.py  test_kuveyt_turk_provider.py  test_ml_experiments.py  test_news_phase12.py  test_notifications.py  test_paper_trading.py  test_price_collector.py  test_regimes.py  test_risks.py  test_runtime_phase18.py  test_source_policy.py  test_strategies.py  test_yahoo_reference_backfill.py
(+310 files in other folders)
