[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silverpilot"
version = "0.1.0"
description = "Paper-trading simulation backend for precious metals."
readme = "ROADMAP.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]
ml = [
  "scikit-learn>=1.5.0",
]

[project.scripts]
silverpilot-collect-kuveyt = "silverpilot.app.collectors.cli:main"
silverpilot-ml-experiment = "silverpilot.app.ml_experiments.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/silverpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".agent", ".codex"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
mypy_path = "src"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
